Bug 136516 - Frame & frame content disengaged on docx export
Summary: Frame & frame content disengaged on docx export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: DOCX-Textbox
  Show dependency treegraph
 
Reported: 2020-09-06 14:55 UTC by Telesto
Modified: 2021-02-22 13:26 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The original document and its docx version in LO 7.2alpha after pulling them a bit (101.80 KB, image/png)
2020-12-04 11:52 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in 7.2 (214.38 KB, image/jpeg)
2020-12-08 09:34 UTC, Attila Bakos (NISZ)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-06 14:55:19 UTC
Description:
Frame & frame content disengaged on docx export

Steps to Reproduce:
1. Open attachment 164139 [details] See also bug 136515 
2. Save as DOCX
3. Drag the frame around

Actual Results:
Different parts

Expected Results:
One group


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.1

frame doesn't overlap at open
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL

4.2
Nothing to export
Comment 1 NISZ LibreOffice Team 2020-12-04 11:52:27 UTC
Created attachment 167827 [details]
The original document and its docx version in LO 7.2alpha after pulling them a bit

Still happens in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 561e5559bb68242c7f785f0ca3bee3eb12b58963
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

Looks like the negative horizontal position has to do something with this. Once I pull the anchor to the right of the paragraph markers, I can move it without the shape and the textframe falling apart.
Comment 2 Attila Bakos (NISZ) 2020-12-08 09:34:47 UTC
Created attachment 167932 [details]
Screenshot of the problem in 7.2

It seems the problem is the wrap, because if i move the shape according to this attachment, the anchor of it goes to the right side of it, and that is the reason why it fall apart. The textframe uses that position but the shape goes left because if the shape moved to left side, the paragraphs will follow it, so the anchor will move to left as well. The problem is implementation error, because the when the frame gets its position, the whole positioning is in progress so that's why it get bad place. I hope it was useful information....
Comment 3 Commit Notification 2021-02-04 11:57:27 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c96c386c5db45dc4d5e358915caad7474e373068

tdf#136516 add positioning to SwTextBoxHelper::syncProperty()

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Attila Bakos (NISZ) 2021-02-05 11:08:44 UTC
*** Bug 138951 has been marked as a duplicate of this bug. ***
Comment 5 Attila Bakos (NISZ) 2021-02-05 11:09:38 UTC
*** Bug 139686 has been marked as a duplicate of this bug. ***
Comment 6 Attila Bakos (NISZ) 2021-02-05 11:10:31 UTC
*** Bug 139092 has been marked as a duplicate of this bug. ***