tdf#136516 add positioning to SwTextBoxHelper::syncProperty()

Before when the shape of the textbox moved, the anchor
and the position synched. However if the new position
of the shape required new anchor position, that was not
handled. In addition after positioning and new anchor
position the sync is necessary again, because anchor
moving can change the calculated position values and
that can change the anchor etc...

The OOXMLImport test modification was necessary because
a test failed during Jenkins tests however there was
no difference between the test document before and after the
fix. In addition I can not reproduce the fail of the test
in my local repository, and only the Linux- and Windows
builds showed the problem.

Solved also tdf#138951, tdf#139686 and tdf#139092.

Change-Id: Ibdfff89db01d75aeae74948e2ea41ce5a613b6fa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109365
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit c96c386c5db45dc4d5e358915caad7474e373068)