sw/source/core/doc/textboxhelper.cxx
@@ -721,6 +721,7 @@ void SwTextBoxHelper::syncProperty(SwFrameFormat* pShape, sal_uInt16 nWID, sal_u
                         xPropertySet->setPropertyValue(UNO_NAME_ANCHOR_TYPE, aValue);
                     }
                     // After anchoring the position must be set as well:
+                    // At-Page anchor this will be the following:
                     if (aValue.get<text::TextContentAnchorType>()
                         == text::TextContentAnchorType::TextContentAnchorType_AT_PAGE)
                     {
@@ -734,7 +735,28 @@ void SwTextBoxHelper::syncProperty(SwFrameFormat* pShape, sal_uInt16 nWID, sal_u
                             return;
                         }
                     }
+                    // At-Content Anchors have to be synced:
+                    if (aValue.get<text::TextContentAnchorType>()
+                            == text::TextContentAnchorType::TextContentAnchorType_AT_PARAGRAPH
+                        || aValue.get<text::TextContentAnchorType>()
+                               == text::TextContentAnchorType::TextContentAnchorType_AT_CHARACTER)
+                    {
+                        // If the shape has content...
+                        if (auto aPos = pShape->GetAnchor().GetContentAnchor())
+                        {
+                            SwFormatAnchor aAnch(pFormat->GetAnchor());
+                            // ...set it for the textframe too.
+                            aAnch.SetAnchor(aPos);
+                            pFormat->SetFormatAttr(aAnch);
+                        }
+                        else
+                            SAL_WARN("sw.core",
+                                     "SwTextBoxHelper::syncProperty: Anchor without content!");
+                    }
+                    // And the repositioning:
+                    tools::Rectangle aRect(getTextRectangle(pShape, false));
 
+<<<<<<< HEAD   (653f2c tdf#137803 sw: fix AutoSize and Wrap of textboxes)
                     // At-Content Anchors have to be synced:
                     if (aValue.get<text::TextContentAnchorType>()
                             == text::TextContentAnchorType::TextContentAnchorType_AT_PARAGRAPH
@@ -773,6 +795,15 @@ void SwTextBoxHelper::syncProperty(SwFrameFormat* pShape, sal_uInt16 nWID, sal_u
                             SAL_WARN("sw.core",
                                      "SwTextBoxHelper::syncProperty: Repositioning failed!");
                     }
+=======
+                    SwFormatHoriOrient aNewHOri(pShape->GetHoriOrient());
+                    aNewHOri.SetPos(aNewHOri.GetPos() + aRect.getX());
+                    SwFormatVertOrient aNewVOri(pShape->GetVertOrient());
+                    aNewVOri.SetPos(aNewVOri.GetPos() + aRect.getY());
+
+                    pFormat->SetFormatAttr(aNewHOri);
+                    pFormat->SetFormatAttr(aNewVOri);
+>>>>>>> CHANGE (c96c38 tdf#136516 add positioning to SwTextBoxHelper::syncProperty()
                     return;
                 }
                 break;
